Imported from https://mlaptev@github.com/mlaptev/new2tyu.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = asd
+[access "refs/*"]
+	owner = group user/mlaptev
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/mlaptev
+	label-Verified = -1..+1 group user/mlaptev
+	push = group user/mlaptev
+	read = group user/mlaptev
+	rebase = group user/mlaptev
+	removeReviewer = group user/mlaptev
+	submit = group user/mlaptev
+[access "refs/heads/*"]
+	create = group user/mlaptev
+	push = +force group user/mlaptev
+	pushMerge = group user/mlaptev
+	read = group user/mlaptev
+[access "refs/tags/*"]
+	push = group user/mlaptev
+	push = +force group user/mlaptev
